# anti_messenger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
nginx/: nginx.conf
src/: entrypoint.sh  manage.py
src/anti_messenger/: asgi.py  settings.py  urls.py  wsgi.py
src/communications/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
src/communications/migrations/: 0001_initial.py
src/communications/templates/cards/: comment_card.html  message_card.html  theme_card.html  user_card.html
src/communications/templates/communications/: comment_list.html  message_detail.html  message_form.html  message_list.html  theme_form.html  theme_list.html
src/tests/: conftest.py  factories.py  test_communications.py  test_users.py
src/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/: base.html  main_page.html
src/users/templates/django_registration/: activation_complete.html  activation_email_body.txt  activation_email_subject.txt  activation_failed.html  registration_complete.html  registration_form.html
src/users/templates/users/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  user_list.html
src/users/templates/users/email/: password_reset_email.html
